--- a/app/src/main/res/layout/activity_launcher_screen.xml
+++ b/app/src/main/res/layout/activity_launcher_screen.xml
@@ -26,28 +26,47 @@
             android:src="@drawable/male_doc_snipe" />
     </androidx.cardview.widget.CardView>
 
-    <View
-        android:id="@+id/view53"
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="280dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/navy"
+        android:text="@string/sign_in"
+        android:textColor="#FFFFFF"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLauncher" />
+
+    <TextView
+        android:id="@+id/textViewLauncher"
         android:layout_width="330dp"
         android:layout_height="100dp"
         android:layout_marginTop="-50dp"
         android:background="@drawable/whiterectangle"
         android:elevation="20dp"
+        android:paddingTop="24dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textColor="#1A446B"
+        android:textSize="28sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <Button
-        android:id="@+id/button6"
-        android:layout_width="200dp"
+        android:id="@+id/button7"
+        android:layout_width="280dp"
         android:layout_height="70dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/navy"
-        android:text="@string/login"
+        android:text="@string/register_with_us"
         android:textColor="#FFFFFF"
-        android:textSize="25sp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view53" />
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
