--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1A446B"
     tools:context=".Login_Activity">
 
+    <View
+        android:id="@+id/view53"
+        android:layout_width="310dp"
+        android:layout_height="500dp"
+
+        android:background="@drawable/button_white_and_blue_border_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView39"
+        android:layout_width="280dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/doc_group_snipe"
+        app:layout_constraintEnd_toEndOf="@+id/view53"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="@+id/view53"
+        app:layout_constraintTop_toBottomOf="@+id/textView90" />
+
+    <TextView
+        android:id="@+id/textView90"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/welcome_user"
+        android:textColor="#1A446B"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/view53"
+        app:layout_constraintStart_toStartOf="@+id/view53"
+        app:layout_constraintTop_toTopOf="@+id/view53" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/pop_up_appointments_background"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawablePadding="8dp"
+        android:ems="10"
+        android:hint="@string/enter_email_hint"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:paddingLeft="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/view53"
+        app:layout_constraintStart_toStartOf="@+id/view53"
+        app:layout_constraintTop_toBottomOf="@+id/imageView39" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName2"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/pop_up_appointments_background"
+        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
+        android:drawablePadding="8dp"
+        android:ems="10"
+        android:hint="@string/enter_password_hint"
+        android:inputType="textPassword"
+        android:minHeight="48dp"
+        android:paddingLeft="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/view53"
+        app:layout_constraintStart_toEndOf="@+id/view53"
+        app:layout_constraintStart_toStartOf="@+id/view53"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:background="@drawable/navy"
+        android:text="@string/login"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/view53"
+        app:layout_constraintEnd_toEndOf="@+id/view53"
+        app:layout_constraintStart_toStartOf="@+id/view53"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
