--- a/app/src/main/res/layout/activity_launcher_screen.xml
+++ b/app/src/main/res/layout/activity_launcher_screen.xml
@@ -46,12 +46,12 @@
         android:layout_marginTop="-40dp"
         android:background="@drawable/whiterectangle"
         android:elevation="10dp"
-        android:paddingTop="20dp"
+        android:paddingTop="18dp"
         android:text="TextView"
         android:textAlignment="center"
         android:textColor="#1A446B"
         android:textSize="30sp"
-        android:textStyle="bold"
+        android:textStyle="normal|bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
@@ -61,9 +61,9 @@
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/navy"
+        android:background="@drawable/pop_up_appointments_background"
         android:text="@string/register_with_us"
-        android:textColor="#FFFFFF"
+        android:textColor="#1A446B"
         android:textSize="19sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
